# CppND-System-Monitor

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: c-cpp.yml  cmake.yml
include/: linux_parser.h  process.h  processor.h
src/: format.cpp  linux_parser.cpp  ncurses_display.cpp  process.cpp  processor.cpp  system.cpp
test/: test.cpp
